# photo-gallery

./: .gitignore  Cargo.toml
backend/: .env  .gitignore  Cargo.toml
backend/src/: acceptor.rs  client_ws.rs  frontend.rs  main.rs  runtime.rs  server.rs  state.rs  upload.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  Gallery.css  Gallery.tsx  QR.css  QR.tsx  Upload.css  Upload.tsx  consts.tsx
public/: index.html  index.js
public/upload/: index.html  index.js
src/: main.rs
