[package]
name = "photo-gallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "macros", "ws"] }
axum_typed_multipart = "0.15.1"
futures-util = "0.3.29"
once_cell = "1.18.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.17.1"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tower_governor = "0.6.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
uuid = { version = "1.14.0", features = ["v4", "fast-rng"] }
